# feast-operators

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/: automatic_backport_tracks.yaml
.github/workflows/: ci.yaml
charms/feast-integrator/: CONTRIBUTING.md  README.md  charmcraft.yaml  metadata.yaml  pyproject.toml  requirements-fmt.txt  requirements-lint.txt  requirements.in  requirements.txt  tox.ini
charms/feast-integrator/lib/charms/feast_integrator/v0/: feast_store_configuration.py
charms/feast-integrator/src/: charm.py
charms/feast-integrator/src/components/: database_requirer_component.py  poddefault_sender_component.py  secret_sender_component.py  store_configuration_sender_component.py
charms/feast-integrator/src/templates/: feature_store.yaml.j2  feature_store_poddefault.yaml.j2  feature_store_secret.yaml.j2
charms/feast-integrator/terraform/: README.md  main.tf  outputs.tf  variables.tf
charms/feast-integrator/tests/integration/: conftest.py  namespace.yaml  test_charm.py
charms/feast-integrator/tests/integration/configuration-requirer-tester/: charmcraft.yaml
charms/feast-integrator/tests/integration/configuration-requirer-tester/lib/charms/feast_integrator/v0/: feast_store_configuration.py
charms/feast-integrator/tests/integration/configuration-requirer-tester/src/: charm.py
charms/feast-integrator/tests/unit/: test_charm.py  test_feature_store_configuration.py
charms/feast-ui/: CONTRIBUTING.md  README.md  metadata.yaml  pyproject.toml  requirements.txt  tox.ini
charms/feast-ui/src/: charm.py
charms/feast-ui/src/components/: istio_ambient_requirer_component.py  istio_relations_conflict_detector.py  pebble_component.py  store_configuration_reciver_component.py
charms/feast-ui/terraform/: README.md  main.tf  outputs.tf  variables.tf
charms/feast-ui/tests/integration/: charms_dependencies.py  conftest.py  test_charm.py  test_charm_ambient.py
charms/feast-ui/tests/integration/configuration-provider-tester/: charmcraft.yaml
charms/feast-ui/tests/integration/configuration-provider-tester/src/: charm.py  feature_store.yaml
charms/feast-ui/tests/unit/: test_charm.py
docs/: .custom_wordlist.txt  conf.py  index.rst
docs/explanation/: index.rst  system-architecture.rst
docs/how-to/: deploy-charmed-feast.rst  index.rst  use_charmed_feast.rst
docs/reference/: index.rst  reference_architecture.rst  system_architecture.rst
docs/reuse/: links.txt
docs/tutorial/: deploy-charmed-feast.rst  get-started.rst  index.rst
tools/: get-images.sh
