[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
charmed-kubeflow-chisme = "^0.4.6"
jinja2 = "^3.1.6"
lightkube = "^0.17.1"
ops = "^2.20.0"

[tool.poetry.group.charm-libs.dependencies]
ops = "^2.20.0"

# update-requirements
[tool.poetry.group.update-requirements]
optional = true

[tool.poetry.group.update-requirements.dependencies]
poetry-plugin-export = "^1.9.0"

# format
[tool.poetry.group.fmt]
optional = true

[tool.poetry.group.fmt.dependencies]
ruff = "^0.11.5"
black = "^25.1.0"

# lint
[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
ruff = "^0.11.5"
codespell = "^2.4.1"
black = "^25.1.0"
pyright = "^1.1.399"

# unit
[tool.poetry.group.unit]
optional = true

[tool.poetry.group.unit.dependencies]
ops = {extras = ["testing"], version = "^2.20.0"}
pytest = "^8.3.5"
coverage = "^7.8.0"
charmed-kubeflow-chisme = "^0.4.6"
serialized-data-interface = "^0.7.0"

# integration
[tool.poetry.group.integration]
optional = true

[tool.poetry.group.integration.dependencies]
jubilant = "^1.0.1"
pytest = "^8.3.5"
charmed-kubeflow-chisme = "^0.4.6"

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"

# Linting tools configuration
[tool.ruff]
line-length = 99
lint.select = ["E", "W", "F", "C", "N", "D", "I001"]
lint.extend-ignore = [
    "D105",
    "D107",
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
]
extend-exclude = ["__pycache__", "*.egg_info"]
lint.per-file-ignores = {"tests/*" = ["D100","D101","D102","D103","D104"]}

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.codespell]
skip = "build,lib,venv,icon.svg,.tox,.git,.mypy_cache,.ruff_cache,.coverage"

[tool.pyright]
include = ["src/**.py"]
